--- a/package.json
+++ b/package.json
@@ -37,10 +37,14 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@tanstack/react-table": "^8.21.3",
     "@types/js-cookie": "^3.0.6",
+    "@types/stripe-v3": "^3.1.33",
     "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
